--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="purplebackground"></div>
    <!-- фигуры -->
         <div class="figures">
-          <img class="figureicon" alt="" src="/img/ellipse-21.svg">
+          <img class="figureicon" alt="" src="../img/ellipse-21.svg">
           <img class="figureicon2" alt="" src="/img/vector-130.svg">
           <img class="figureicon3" alt="" src="/img/vector-164.svg">
           <img class="figureicon4" alt="" src="/img/vector-158.svg">
