--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
    <!-- фигуры -->
         <div class="figures">
           <img class="figureicon" alt="" src="img/ellipse-21.svg">
-          <img class="figureicon2" alt="" src="/img/vector-130.svg">
-          <img class="figureicon3" alt="" src="/img/vector-164.svg">
-          <img class="figureicon4" alt="" src="/img/vector-158.svg">
-          <img class="figureicon5" alt="" src="/img/vector-152.svg">
-          <img class="figureicon6" alt="" src="/img/vector-159.svg">
-          <img class="figureicon7" alt="" src="/img/vector-165@2x.png">
-          <img class="figureicon8" alt="" src="/img/vector-173.svg">
-          <img class="figureicon9" alt="" src="/img/vector-132.svg">
-          <img class="figureicon10" alt="" src="/img/vector-148.svg">
-          <img class="figureicon11" alt="" src="/img/vector-160.svg">
-          <img class="figureicon12" alt="" src="/img/vector-133.svg">
-          <img class="figureicon13" alt="" src="/img/vector-176.svg">
-          <img class="figureicon14" alt="" src="/img/vector-169.svg">
-          <img class="figureicon15" alt="" src="/img/vector-162.svg">
-          <img class="figureicon16" alt="" src="/img/vector-135.svg">
+          <img class="figureicon2" alt="" src=img/vector-130.svg">
+          <img class="figureicon3" alt="" src="img/vector-164.svg">
+          <img class="figureicon4" alt="" src="img/vector-158.svg">
+          <img class="figureicon5" alt="" src="img/vector-152.svg">
+          <img class="figureicon6" alt="" src="img/vector-159.svg">
+          <img class="figureicon7" alt="" src="img/vector-165@2x.png">
+          <img class="figureicon8" alt="" src="img/vector-173.svg">
+          <img class="figureicon9" alt="" src="img/vector-132.svg">
+          <img class="figureicon10" alt="" src="img/vector-148.svg">
+          <img class="figureicon11" alt="" src="img/vector-160.svg">
+          <img class="figureicon12" alt="" src="img/vector-133.svg">
+          <img class="figureicon13" alt="" src="img/vector-176.svg">
+          <img class="figureicon14" alt="" src="img/vector-169.svg">
+          <img class="figureicon15" alt="" src="img/vector-162.svg">
+          <img class="figureicon16" alt="" src="img/vector-135.svg">
           <img class="figureicon17" alt="" src="/img/vector-166@2x.png">
           <img class="figureicon18" alt="" src="/img/vector-151.svg">
           <img class="figureicon19" alt="" src="/img/vector-147.svg">
