--- a/index.html
+++ b/index.html
@@ -31,33 +31,33 @@
           <img class="figureicon14" alt="" src="img/vector-169.svg">
           <img class="figureicon15" alt="" src="img/vector-162.svg">
           <img class="figureicon16" alt="" src="img/vector-135.svg">
-          <img class="figureicon17" alt="" src="/img/vector-166@2x.png">
-          <img class="figureicon18" alt="" src="/img/vector-151.svg">
-          <img class="figureicon19" alt="" src="/img/vector-147.svg">
-          <img class="figureicon20" alt="" src="/img/vector-163.svg">
-          <img class="figureicon21" alt="" src="/img/vector-136.svg">
-          <img class="figureicon22" alt="" src="/img/vector-150.svg">
-          <img class="figureicon23" alt="" src="/img/vector-157.svg">
-          <img class="figureicon24" alt="" src="/img/vector-153.svg">
-          <img class="figureicon25" alt="" src="/img/vector-179.svg">
-          <img class="figureicon26" alt="" src="/img/vector-172.svg">
-          <img class="figureicon27" alt="" src="/img/vector-139.svg">
-          <img class="figureicon28" alt="" src="/img/vector-170.svg">
-          <img class="figureicon29" alt="" src="/img/vector-154.svg">
-          <img class="figureicon30" alt="" src="/img/vector-140.svg">
-          <img class="figureicon31" alt="" src="/img/vector-141.svg">
-          <img class="figureicon32" alt="" src="/img/vector-144.svg">
-          <img class="figureicon33" alt="" src="/img/vector-175.svg">
-          <img class="figureicon34" alt="" src="/img/vector-174.svg">
-          <img class="figureicon35" alt="" src="/img/vector-177.svg">
-          <img class="figureicon36" alt="" src="/img/vector-178@2x.png">
-          <img class="figureicon37" alt="" src="/img/vector-161.svg">
-          <img class="figureicon38" alt="" src="/img/vector-149.svg">
-          <img class="figureicon39" alt="" src="/img/vector-1721.svg">
-          <img class="figureicon40" alt="" src="/img/vector-159.svg">
-          <img class="figureicon41" alt="" src="/img/vector-1651@2x.png">
-          <img class="figureicon42" alt="" src="/img/vector-1722.svg">
-          <img class="figureicon43" alt="" src="/img/vector-171.svg">
+          <img class="figureicon17" alt="" src="img/vector-166@2x.png">
+          <img class="figureicon18" alt="" src="img/vector-151.svg">
+          <img class="figureicon19" alt="" src="img/vector-147.svg">
+          <img class="figureicon20" alt="" src="img/vector-163.svg">
+          <img class="figureicon21" alt="" src="img/vector-136.svg">
+          <img class="figureicon22" alt="" src="img/vector-150.svg">
+          <img class="figureicon23" alt="" src="img/vector-157.svg">
+          <img class="figureicon24" alt="" src="img/vector-153.svg">
+          <img class="figureicon25" alt="" src="img/vector-179.svg">
+          <img class="figureicon26" alt="" src="img/vector-172.svg">
+          <img class="figureicon27" alt="" src="img/vector-139.svg">
+          <img class="figureicon28" alt="" src="img/vector-170.svg">
+          <img class="figureicon29" alt="" src="img/vector-154.svg">
+          <img class="figureicon30" alt="" src="img/vector-140.svg">
+          <img class="figureicon31" alt="" src="img/vector-141.svg">
+          <img class="figureicon32" alt="" src="img/vector-144.svg">
+          <img class="figureicon33" alt="" src="img/vector-175.svg">
+          <img class="figureicon34" alt="" src="img/vector-174.svg">
+          <img class="figureicon35" alt="" src="img/vector-177.svg">
+          <img class="figureicon36" alt="" src="img/vector-178@2x.png">
+          <img class="figureicon37" alt="" src="img/vector-161.svg">
+          <img class="figureicon38" alt="" src="img/vector-149.svg">
+          <img class="figureicon39" alt="" src="img/vector-1721.svg">
+          <img class="figureicon40" alt="" src="img/vector-159.svg">
+          <img class="figureicon41" alt="" src="img/vector-1651@2x.png">
+          <img class="figureicon42" alt="" src="img/vector-1722.svg">
+          <img class="figureicon43" alt="" src="img/vector-171.svg">
   <!-- приветствия -->
           <div class="hi">HI</div>
           <div class="hi2">SELAM</div>
@@ -113,7 +113,7 @@
           <p class="p">О ШРИФТЕ</p>
         </h1>
         <div class="aboutfonttext">
-          <img class="cloudicon" alt="" src="./img/vector-180.svg">
+          <img class="cloudicon" alt="" src="img/vector-180.svg">
           <div class="fonthistory">
             <p class="p">
               Был разработан Стивом Мэттисоном по заказу Google в 2010 году
@@ -123,27 +123,27 @@
               Стал одним из самых популярных шрифтов для веб-дизайна и печати
             </p>
           </div>
-          <img class="cloudicon2" alt="" src="./img/vector-181.svg">
-          <img class="cloudicon3" alt="" src="./img/vector-181.svg">
+          <img class="cloudicon2" alt="" src="img/vector-181.svg">
+          <img class="cloudicon3" alt="" src="img/vector-181.svg">
         </div>
       </section>
   <!-- третий экран /языки -->
       <section class="languages">
         <b class="langnumber">488 ЯЗЫКОВ</b>
-        <img class="flagsicon" alt="" src="/img/flags.png">
+        <img class="flagsicon" alt="" src="img/flags.png">
       </section>
   <!-- флажки -->
       <section class="flags">
-        <img class="flagicon" alt="" src="/img/polygon-1@2x.png">
-        <img class="flagicon2" alt="" src="/img/polygon-2@2x.png">
-        <img class="flagicon3" alt="" src="/img/polygon-10@2x.png">
-        <img class="flagicon4" alt="" src="/img/polygon-11@2x.png">
-        <img class="flagicon5" alt="" src="/img/polygon-12.svg">
-        <img class="flagicon6" alt="" src="/img/polygon-13.svg">
-        <img class="flagicon7" alt="" src="/img/polygon-14.svg">
-        <img class="flagicon8" alt="" src="/img/polygon-15.svg">
-        <img class="flagicon9" alt="" src="/img/polygon-16.svg">
-        <img class="line" alt="" src="/img/Line 8.png">
+        <img class="flagicon" alt="" src="img/polygon-1@2x.png">
+        <img class="flagicon2" alt="" src="img/polygon-2@2x.png">
+        <img class="flagicon3" alt="" src="img/polygon-10@2x.png">
+        <img class="flagicon4" alt="" src="img/polygon-11@2x.png">
+        <img class="flagicon5" alt="" src="img/polygon-12.svg">
+        <img class="flagicon6" alt="" src="img/polygon-13.svg">
+        <img class="flagicon7" alt="" src="img/polygon-14.svg">
+        <img class="flagicon8" alt="" src="img/polygon-15.svg">
+        <img class="flagicon9" alt="" src="img/polygon-16.svg">
+        <img class="line" alt="" src="img/Line 8.png">
   <!-- буквы на флажках -->
         <div class="letters"></div>
         <h1 class="a1">A</h1>
@@ -161,9 +161,9 @@
    <div class="chinabook">
     <div class="cover"></div>
     <div class="bamboo">
-      <img class="bambooicon" alt="" src="/img/bamboo.png">
-      <img class="bambooicon2" alt="" src="/img/bamboo2.png">
-      <img class="bambooicon3" alt="" src="/img/bamboo3.png">
+      <img class="bambooicon" alt="" src="img/bamboo.png">
+      <img class="bambooicon2" alt="" src="img/bamboo2.png">
+      <img class="bambooicon3" alt="" src="img/bamboo3.png">
       <img class="bambooicon4" alt="" src="img/bamboo.png">
     </div>
     <div class="ellipse"></div>
@@ -179,7 +179,7 @@
     <h1 class="english">ENGLISH</h1>
     <b class="grade2">2</b>
     <div class="students-book">student’s book</div>
-    <img class="bigbenicon" alt="" src="/img/bigben.png">
+    <img class="bigbenicon" alt="" src="img/bigben.png">
   </div>
   <!-- английский алфавит -->
       <div class="eng_alph">
@@ -191,25 +191,25 @@
         <div class="letterd">
           <h1 class="dd">Dd</h1>
           <div class="dog">dog</div>
-          <img class="dogicon" alt="" src="/img/dog.png">
+          <img class="dogicon" alt="" src="img/dog.png">
         </div>
   <!-- буква с -->
         <div class="letterc">
           <h1 class="cc">Cc</h1>
           <div class="cat">cat</div>
-          <img class="caticon" alt="" src="/img/cat.png">
+          <img class="caticon" alt="" src="img/cat.png">
         </div>
   <!-- буква б -->    
         <div class="letterb">
           <h1 class="bb">Bb</h1>
           <div class="banana">banana</div>
-          <img class="bananaicon" alt="" src="/img/banana.png">
+          <img class="bananaicon" alt="" src="img/banana.png">
         </div>
   <!-- буква а -->   
         <div class="lettera">
           <h1 class="aa">Аа</h1>
           <div class="apple">apple</div>
-          <img class="appleicon" alt="" src="/img/apple.png">
+          <img class="appleicon" alt="" src="img/apple.png">
         </div>
       </div>
   <!-- овощи на китайском -->
@@ -218,12 +218,12 @@
         <div class="vegetables">蔬菜</div>
         <div class="page2">5</div>
         <div class="background3"></div>
-        <img class="vegicon" alt="" src="/img/veg1.png">
-        <img class="vegicon2" alt="" src="/img/veg2.png">
-        <img class="vegicon3" alt="" src="/img/veg3.png">
-        <img class="vegicon4" alt="" src="/img/veg4.png">
-        <img class="vegicon5" alt="" src="/img/veg5.png">
-        <img class="vegicon6" alt="" src="/img/veg6.png">
+        <img class="vegicon" alt="" src="img/veg1.png">
+        <img class="vegicon2" alt="" src="img/veg2.png">
+        <img class="vegicon3" alt="" src="img/veg3.png">
+        <img class="vegicon4" alt="" src="img/veg4.png">
+        <img class="vegicon5" alt="" src="img/veg5.png">
+        <img class="vegicon6" alt="" src="img/veg6.png">
         <div class="vegname">黄瓜</div>
         <div class="vegname2">茄子</div>
         <div class="vegname3">洋葱</div>
@@ -358,19 +358,19 @@
         <h1 class="h1">ОСОБЕННОСТИ</h1>
         <div class="bigletters">
           <h1 class="ay">aй</h1>
-          <img class="line1" alt="" src="/img/line-9.svg">
-          <img class="line2" alt="" src="/img/line-13.svg">
-          <img class="line3" alt="" src="/img/line-10@2x.png">
-          <img class="line4" alt="" src="/img/line-11@2x.png">
-          <img class="line5" alt="" src="/img/line-16.svg">
-          <img class="line6" alt="" src="/img/line-15.svg">
-          <img class="line7" alt="" src="/img/line-12.svg">
+          <img class="line1" alt="" src="img/line-9.svg">
+          <img class="line2" alt="" src="img/line-13.svg">
+          <img class="line3" alt="" src="img/line-10@2x.png">
+          <img class="line4" alt="" src="img/line-11@2x.png">
+          <img class="line5" alt="" src="img/line-16.svg">
+          <img class="line6" alt="" src="img/line-15.svg">
+          <img class="line7" alt="" src="img/line-12.svg">
         </div>
       </section> 
   <!-- футер -->
     <footer class="footer">
       <footer class="background"></footer>
-        <img class="logo" alt="" src="/img/logo.png">
+        <img class="logo" alt="" src="img/logo.png">
         <div class="text">
           <p class="p">АННА ЯКОВЛЕВА</p>
           <p class="p">Б23ДЗ09</p>
