--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <!-- фигуры -->
         <div class="figures">
           <img class="figureicon" alt="" src="img/ellipse-21.svg">
-          <img class="figureicon2" alt="" src=img/vector-130.svg">
+          <img class="figureicon2" alt="" src="img/vector-130.svg">
           <img class="figureicon3" alt="" src="img/vector-164.svg">
           <img class="figureicon4" alt="" src="img/vector-158.svg">
           <img class="figureicon5" alt="" src="img/vector-152.svg">
